WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259279
absoluteRects are computed incorrectly for some continuations
https://bugs.webkit.org/show_bug.cgi?id=259279
Summary
absoluteRects are computed incorrectly for some continuations
Simon Fraser (smfr)
Reported
2023-07-17 10:53:14 PDT
RenderBlock::absoluteRects() gets the math wrong for some continuations.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-07-17 10:53:32 PDT
<
rdar://problem/112413956
>
Simon Fraser (smfr)
Comment 2
2023-07-17 10:59:21 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15884
EWS
Comment 3
2023-07-19 15:24:13 PDT
Committed
266169@main
(6ddbb226ce39): <
https://commits.webkit.org/266169@main
> Reviewed commits have been landed. Closing PR #15884 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug