absoluteRects are computed incorrectly for some continuations https://bugs.webkit.org/show_bug.cgi?id=259279 rdar://112413956

Reviewed by Alan Baradlay.

A <div> inside a <span> triggers continutations, and if you call RenderInline::absoluteRects() on that span,
the rect for the last continuation is wrong. RenderBlock::absoluteRects() needs to subtract its own
location() and add that of the containing block, just like RenderInline::absoluteRects() does.

* LayoutTests/fast/block/continuations-bounding-box-expected.txt: Added.
* LayoutTests/fast/block/continuations-bounding-box.html: Added.
* Source/WebCore/rendering/RenderBlock.cpp:
(WebCore::RenderBlock::absoluteRects const):

Canonical link: https://commits.webkit.org/266169@main