Source/WebCore/rendering/RenderBlock.cpp
@@ -2794,7 +2794,8 @@ void RenderBlock::absoluteRects(Vector<IntRect>& rects, const LayoutPoint& accum
         // FIXME: This is wrong for block-flows that are horizontal.
         // https://bugs.webkit.org/show_bug.cgi?id=46781
         rects.append(snappedIntRect(accumulatedOffset.x(), accumulatedOffset.y() - collapsedMarginBefore(), width(), height() + collapsedMarginBefore() + collapsedMarginAfter()));
-        continuation->absoluteRects(rects, accumulatedOffset - toLayoutSize(location() + inlineContinuation()->containingBlock()->location()));
+        auto* containingBlock = inlineContinuation()->containingBlock();
+        continuation->absoluteRects(rects, accumulatedOffset - locationOffset() + containingBlock->locationOffset());
     } else
         rects.append(snappedIntRect(accumulatedOffset, size()));
 }
